# hydra-ai

./: .dockerignore  .gitignore  .lintstagedrc.json  .prettierc.json  .prttierignore  README.md  commitlint.config.js  eslint.config.js  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.husky/: commit-msg  pre-commit
apps/server/: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
apps/server/app/: main.py  server.py
apps/server/app/api/routes/: health.py  onboarding.py  organization.py  organization_credentials.py  organization_invite.py  user_route.py
apps/server/app/api/routes/auth/: m2m.py
apps/server/app/api/routes/mcp/: mcp.py
apps/server/app/api/routes/telemetry/: batch.py  events.py  incidents.py  logs.py  metrics.py
apps/server/app/config/: settings.py
apps/server/app/core/: auth.py
apps/server/app/core/auth/: clerk_auth.py  decorators.py  m2m_auth.py  permission_checker.py  session_manager.py  user_session.py
apps/server/app/core/database/: aggregate_reader.py  aggregate_store.py  aggregation_checkpoint.py  incident_store.py  logs_store.py  mcp_server_store.py  metrics_store.py  organization_credentials_store.py  organization_store.py  revoked_token_store.py  role_permission_store.py  role_store.py  session_store.py  trace_store.py  user_store.py
apps/server/app/core/decorators/: get_user.py  socket_auth.py
apps/server/app/core/helpers/: emit_distress.py  ensure_membership.py  ensure_permissions.py  event_emitter.py  get_user.py  telemetry_data_processor.py
apps/server/app/core/mcp/: mcp_client.py
apps/server/app/core/telemetry/: aggregate_telemetry.py  anomaly_detection.py  metric_analyzer.py  metric_baseline.py
apps/server/app/core/types/: aggregate_telemetry.py  anomaly.py  auth_type.py  mcp.py  role_type.py  user_type.py
apps/server/app/models/: __init__.py  agent.py  base.prisma  enums.py  mixins.py  organization.py  role.py  sql_model.py  user.py
apps/server/app/services/: database_service.py  mcp_service.py  socketio_service.py  telemetry_service.py
apps/server/app/utils/: cipher_key.py  datetime_from_now.py  hash_secret.py  logging.py  now.py  security.py  threads.py
apps/web/: eslint.config.mjs  middleware.ts  next.config.ts  package.json
apps/web/app/: layout.tsx  manifest.webmanifest  page.tsx
apps/web/app/(global)/: fonts.tsx  metadata.tsx
apps/web/app/(pages)/: layout.tsx  page.tsx
apps/web/components/data-tables/: data-table.tsx
apps/web/components/modals/: client-credentials-modal.tsx  create-org-modal.tsx  invite-member-modal.tsx  third-party-modal.tsx
apps/web/hooks/: use-bearer-token.ts  use-clipboard.ts  use-fetch.ts  use-fetch.tsx  use-isclient.ts  use-mutate.ts  use-socket.ts
apps/web/libs/: api.ts  socket.ts
apps/web/store/: mcp-server-store.ts  modal-store.ts  org-store.ts  socket-store.ts
apps/web/styles/: globals.scss  tailwind.css
apps/web/types/: baseprops.ts  log-entry.ts  mcp-server.ts  org.ts
docs/: agent_execution_diagram.md  database_diagram.md
examples/express-server/: .dockerignore  Dockerfile  docker-compose.yml  package.json  prometeus.yml  tsconfig.json
examples/express-server/src/: index.ts  instrumentation.ts
examples/fast-api-server/: main.py  pyproject.toml
examples/mcp-server-example/: pyproject.toml
examples/mcp-server-example/src/mcp_server_example/: main.py
(+44 files in other folders)
