[project]
name = "fast-api-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "hydra-sdk",
    "opentelemetry-api>=1.36.0",
    "opentelemetry-exporter-otlp-proto-http>=1.36.0",
    "opentelemetry-instrumentation-fastapi>=0.57b0",
    "opentelemetry-instrumentation-httpx>=0.57b0",
    "opentelemetry-instrumentation-logging>=0.57b0",
    "opentelemetry-sdk>=1.36.0",
    "psutil>=7.0.0",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
    "structlog>=25.4.0",
    "uvicorn[standard]>=0.35.0",
]

[tool.uv.sources]
hydra-sdk = { path = "../../packages/python/libs/hydra_sdk", editable = true }
