[project]
name = "mcp_server_example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "fastapi>=0.116.1",
    "fastmcp>=2.12.2",
    "mcp>=1.13.1",
    "uvicorn>=0.35.0",
]
[project.scripts]
mcp-server = "mcp_server_example.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_example"]
include = [
    "src/**",
    "readme.md",
    "py.typed",
]
exclude = [
    "tests/",
    "*.pyc",
]

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["e", "w", "f", "i", "b", "c4", "arg", "sim"]
ignore = ["e501", "w503"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.sources]
hydra-types = { path = "../../packages/python/libs/types", editable = true }
